--- a/functions/test-db/json2/scvo/templates/jobs/cjs-job-search.hbs
+++ b/functions/test-db/json2/scvo/templates/jobs/cjs-job-search.hbs
@@ -37,37 +37,8 @@
                     {{> sidebar_cjs_search}}
                 </div>
                 <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-9-desktop mdc-layout-grid__cell--span-5-tablet mdc-layout-grid__cell--span-4-phone content page-content v-margin">
+                    {{#ifAny params.query.q params.query.job_number params.query.location params.query.sector params.query.region}}
                     {{#if primaryResponse.hits.total}}
-                    <div class="mdc-layout-grid cjs-search-list v-margin-full">
-                        <div class="mdc-layout-grid__inner">
-                            <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6-desktop mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-phone">
-                                <h2>Jobs by sector</h2>
-                                <div class="list">
-                                    {{#each supplimentaryResponses.types.aggregations.sectors.buckets}}
-                                    {{#if key}}
-                                    <a href="/jobs/community-jobs-scotland/vacancies/{{../params.phase}}?sector={{key}}">{{key}}</a><br />
-                                    {{/if}}
-                                    {{/each}}
-                                </div>
-                            </div>
-                            <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6-desktop mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-phone">
-                                <h2>Jobs by region</h2>
-                                <div class="list">
-                                    {{#each supplimentaryResponses.types.aggregations.regions.buckets}}
-                                    {{#if key}}
-                                    <a href="/jobs/community-jobs-scotland/vacancies/{{../params.phase}}?region={{key}}">{{key}}</a><br />
-                                    {{/if}}
-                                    {{/each}}
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    {{else}}
-                    <p>
-                        No vacancies in the selected category. Please check back soon.
-                    </p>
-                    {{/if}}
-
                     {{> search_info}}
 
                     {{#each primaryResponse.hits.hits}}
@@ -75,6 +46,107 @@
                     {{/each}}
 
                     {{> pagination}}
+                    {{else}}
+                    <div class="search-info mdc-elevation--z3">
+                        No vacancies in the selected category. Please check back soon.
+                    </div>
+                    {{/if}}
+                    {{else}}
+                    <div class="mdc-layout-grid cjs-search-list v-margin-full">
+                        <div class="mdc-layout-grid__inner">
+                            <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6-desktop mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-phone">
+                                <h2>Jobs by sector</h2>
+                                <div class="list">
+                                    <a href="/jobs/community-jobs-scotland/vacancies/{{params.phase}}?sector=administration-reception">Administration/Reception</a></br />
+                                    <a href="/jobs/community-jobs-scotland/vacancies/{{params.phase}}?sector=advocacy-advice">Advocacy/Advice</a></br />
+                                    <a href="/jobs/community-jobs-scotland/vacancies/{{params.phase}}?sector=animal-care">Animal Care</a></br />
+                                    <a href="/jobs/community-jobs-scotland/vacancies/{{params.phase}}?sector=childcare">Childcare</a></br />
+                                    <a href="/jobs/community-jobs-scotland/vacancies/{{params.phase}}?sector=community-arts">Community Arts</a></br />
+                                    <a href="/jobs/community-jobs-scotland/vacancies/{{params.phase}}?sector=community-third-sector-development">Community third sector Development</a></br />
+                                    <a href="/jobs/community-jobs-scotland/vacancies/{{params.phase}}?sector=conservation">Conservation</a></br />
+                                    <a href="/jobs/community-jobs-scotland/vacancies/{{params.phase}}?sector=creative-industries">Creative Industries</a></br />
+                                    <a href="/jobs/community-jobs-scotland/vacancies/{{params.phase}}?sector=driving-transport">Driving/Transport</a></br />
+                                    <a href="/jobs/community-jobs-scotland/vacancies/{{params.phase}}?sector=education-training-employability-support">Education/Training/Employability Support</a></br />
+                                    <a href="/jobs/community-jobs-scotland/vacancies/{{params.phase}}?sector=environmental-green-industries">Environmental/Green Industries</a></br />
+                                    <a href="/jobs/community-jobs-scotland/vacancies/{{params.phase}}?sector=finance">Finance</a></br />
+                                    <a href="/jobs/community-jobs-scotland/vacancies/{{params.phase}}?sector=health-social-care">Health and Social Care</a></br />
+                                    <a href="/jobs/community-jobs-scotland/vacancies/{{params.phase}}?sector=hospitality-catering">Hospitality and Catering</a></br />
+                                    <a href="/jobs/community-jobs-scotland/vacancies/{{params.phase}}?sector=housing">Housing</a></br />
+                                    <a href="/jobs/community-jobs-scotland/vacancies/{{params.phase}}?sector=it">IT</a></br />
+                                    <a href="/jobs/community-jobs-scotland/vacancies/{{params.phase}}?sector=leisure-tourism">Leisure/Tourism</a></br />
+                                    <a href="/jobs/community-jobs-scotland/vacancies/{{params.phase}}?sector=manual-work-skilled-trades">Manual Work/Skilled Trades</a></br />
+                                    <a href="/jobs/community-jobs-scotland/vacancies/{{params.phase}}?sector=marketing-pr-promotions">Marketing/PR/Promotions</a></br />
+                                    <a href="/jobs/community-jobs-scotland/vacancies/{{params.phase}}?sector=peer-support">Peer Support</a></br />
+                                    <a href="/jobs/community-jobs-scotland/vacancies/{{params.phase}}?sector=retail">Retail</a></br />
+                                    <a href="/jobs/community-jobs-scotland/vacancies/{{params.phase}}?sector=sports">Sports</a></br />
+                                    <a href="/jobs/community-jobs-scotland/vacancies/{{params.phase}}?sector=warehousing">Warehousing</a></br />
+                                    <a href="/jobs/community-jobs-scotland/vacancies/{{params.phase}}?sector=youth-work">Youth Work</a></br />
+                                    <a href="/jobs/community-jobs-scotland/vacancies/{{params.phase}}?sector=business-development">Business Development</a></br />
+                                    <a href="/jobs/community-jobs-scotland/vacancies/{{params.phase}}?sector=campaigning-fundraising">Campaigning/Fundraising</a></br />
+                                    <a href="/jobs/community-jobs-scotland/vacancies/{{params.phase}}?sector=communications">Communications</a></br />
+                                    <a href="/jobs/community-jobs-scotland/vacancies/{{params.phase}}?sector=community-arts-development">Community Arts Development</a></br />
+                                    <a href="/jobs/community-jobs-scotland/vacancies/{{params.phase}}?sector=data-analysis">Data Analysis</a></br />
+                                    <a href="/jobs/community-jobs-scotland/vacancies/{{params.phase}}?sector=database-design-development">Database Design/Development</a></br />
+                                    <a href="/jobs/community-jobs-scotland/vacancies/{{params.phase}}?sector=event-festival-planning">Event/Festival Planning</a></br />
+                                    <a href="/jobs/community-jobs-scotland/vacancies/{{params.phase}}?sector=film-video-production">Film/Video Production</a></br />
+                                    <a href="/jobs/community-jobs-scotland/vacancies/{{params.phase}}?sector=graphic-design">Graphic Design</a></br />
+                                    <a href="/jobs/community-jobs-scotland/vacancies/{{params.phase}}?sector=marketing-pr-promotion">Marketing/PR/Promotion</a></br />
+                                    <a href="/jobs/community-jobs-scotland/vacancies/{{params.phase}}?sector=monitoring-evaluation">Monitoring/Evaluation</a></br />
+                                    <a href="/jobs/community-jobs-scotland/vacancies/{{params.phase}}?sector=policy-development">Policy Development</a></br />
+                                    <a href="/jobs/community-jobs-scotland/vacancies/{{params.phase}}?sector=research">Research</a></br />
+                                    <a href="/jobs/community-jobs-scotland/vacancies/{{params.phase}}?sector=resource-development">Resource Development</a>
+                                    <!-- {{#each supplimentaryResponses.types.aggregations.sectors.buckets}}
+                                    {{#if key}}
+                                    <a href="/jobs/community-jobs-scotland/vacancies/{{../params.phase}}?sector={{key}}">{{key}}</a><br />
+                                    {{/if}}
+                                    {{/each}} -->
+                                </div>
+                            </div>
+                            <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6-desktop mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-phone">
+                                <h2>Jobs by region</h2>
+                                <div class="list">
+                                    <a href="/jobs/community-jobs-scotland/vacancies/{{params.phase}}?region=aberdeen-city">Aberdeen</a></br />
+                                    <a href="/jobs/community-jobs-scotland/vacancies/{{params.phase}}?region=aberdeenshire">Aberdeenshire</a></br />
+                                    <a href="/jobs/community-jobs-scotland/vacancies/{{params.phase}}?region=angus">Angus</a></br />
+                                    <a href="/jobs/community-jobs-scotland/vacancies/{{params.phase}}?region=argyll-bute">Argyll &amp; Bute</a></br />
+                                    <a href="/jobs/community-jobs-scotland/vacancies/{{params.phase}}?region=clackmannanshire">Clackmannanshire</a></br />
+                                    <a href="/jobs/community-jobs-scotland/vacancies/{{params.phase}}?region=dumfries-galloway">Dumfries &amp; Galloway</a></br />
+                                    <a href="/jobs/community-jobs-scotland/vacancies/{{params.phase}}?region=dundee-city">Dundee</a></br />
+                                    <a href="/jobs/community-jobs-scotland/vacancies/{{params.phase}}?region=east-ayrshire">East Ayrshire</a></br />
+                                    <a href="/jobs/community-jobs-scotland/vacancies/{{params.phase}}?region=east-dunbartonshire">East Dunbartonshire</a></br />
+                                    <a href="/jobs/community-jobs-scotland/vacancies/{{params.phase}}?region=east-lothian">East Lothian</a></br />
+                                    <a href="/jobs/community-jobs-scotland/vacancies/{{params.phase}}?region=east-renfrewshire">East Renfrewshire</a></br />
+                                    <a href="/jobs/community-jobs-scotland/vacancies/{{params.phase}}?region=edinburgh-city">Edinburgh</a></br />
+                                    <a href="/jobs/community-jobs-scotland/vacancies/{{params.phase}}?region=falkirk">Falkirk</a></br />
+                                    <a href="/jobs/community-jobs-scotland/vacancies/{{params.phase}}?region=fife">Fife</a></br />
+                                    <a href="/jobs/community-jobs-scotland/vacancies/{{params.phase}}?region=glasgow-city">Glasgow</a></br />
+                                    <a href="/jobs/community-jobs-scotland/vacancies/{{params.phase}}?region=highland">Highland</a></br />
+                                    <a href="/jobs/community-jobs-scotland/vacancies/{{params.phase}}?region=inverclyde">Inverclyde</a></br />
+                                    <a href="/jobs/community-jobs-scotland/vacancies/{{params.phase}}?region=midlothian">Midlothian</a></br />
+                                    <a href="/jobs/community-jobs-scotland/vacancies/{{params.phase}}?region=moray">Moray</a></br />
+                                    <a href="/jobs/community-jobs-scotland/vacancies/{{params.phase}}?region=north Ayrshire">North Ayrshire</a></br />
+                                    <a href="/jobs/community-jobs-scotland/vacancies/{{params.phase}}?region=north-lanarkshire">North Lanarkshire</a></br />
+                                    <a href="/jobs/community-jobs-scotland/vacancies/{{params.phase}}?region=orkney-islands">Orkney Islands</a></br />
+                                    <a href="/jobs/community-jobs-scotland/vacancies/{{params.phase}}?region=perth-kinross">Perth &amp; Kinross</a></br />
+                                    <a href="/jobs/community-jobs-scotland/vacancies/{{params.phase}}?region=renfrewshire">Renfrewshire</a></br />
+                                    <a href="/jobs/community-jobs-scotland/vacancies/{{params.phase}}?region=scottish-borders">Scottish Borders</a></br />
+                                    <a href="/jobs/community-jobs-scotland/vacancies/{{params.phase}}?region=shetland">Shetland</a></br />
+                                    <a href="/jobs/community-jobs-scotland/vacancies/{{params.phase}}?region=south-ayrshire">South Ayrshire</a></br />
+                                    <a href="/jobs/community-jobs-scotland/vacancies/{{params.phase}}?region=south-lanarkshire">South Lanarkshire</a></br />
+                                    <a href="/jobs/community-jobs-scotland/vacancies/{{params.phase}}?region=stirling">Stirling</a></br />
+                                    <a href="/jobs/community-jobs-scotland/vacancies/{{params.phase}}?region=west-dunbartonshire">West Dunbartonshire</a></br />
+                                    <a href="/jobs/community-jobs-scotland/vacancies/{{params.phase}}?region=west-lothian">West Lothian</a></br />
+                                    <a href="/jobs/community-jobs-scotland/vacancies/{{params.phase}}?region=western-isles">Western Isles</a>
+                                    <!-- {{#each supplimentaryResponses.types.aggregations.regions.buckets}}
+                                    {{#if key}}
+                                    <a href="/jobs/community-jobs-scotland/vacancies/{{../params.phase}}?region={{key}}">{{key}}</a><br />
+                                    {{/if}}
+                                    {{/each}} -->
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    {{/ifAny}}
                 </div>
             </div>
         </div>
