--- a/functions/test-db/json2/humanrightsdeclaration/layouts/default.hbs
+++ b/functions/test-db/json2/humanrightsdeclaration/layouts/default.hbs
@@ -32,7 +32,7 @@
       function gtag(){dataLayer.push(arguments);}
       gtag('js', new Date());
 
-      gtag('config', 'UA-3467930-28', { 'send_page_view': false });
+      gtag('config', 'UA-3467930-28', { 'send_page_view': true });
     </script>
 </head>
 <body class="{{replace route.params.path '_' ' '}}">
