--- a/src/assets/css/scvo-styles.scss
+++ b/src/assets/css/scvo-styles.scss
@@ -1827,10 +1827,9 @@ body.the-gathering {
         margin-top: $unit;
     }
 }
-body.the-gathering {
-    .full {
-        width: 60%;
-    }
+body.scottish-charity-awards .scvo-cms-page-20040,
+body.the-gathering .full {
+    width: 60%;
 }
 body.scottish-charity-awards {
     .mdc-card {
@@ -3203,10 +3202,9 @@ footer {
             width: 100%;
         }
     }
-    body.the-gathering {
-        .full {
-            width: 100%;
-        }
+    body.scottish-charity-awards .scvo-cms-page-20040,
+    body.the-gathering .full {
+        width: 100%;
     }
     .digital {
         .latest_content {
