--- a/src/assets/css/scvo-styles.scss
+++ b/src/assets/css/scvo-styles.scss
@@ -1804,6 +1804,10 @@ body.the-gathering {
         .mdc-button {
             width: 100%;
         }
+        .gallery-caption {
+            font-weight: 600;
+            margin-bottom: $unit;
+        }
     }
     .splash-image .splash-overlay .container-fluid {
         min-height: 30vh;
