--- a/functions/test-db/json2/scvo/templates/pages/home.hbs
+++ b/functions/test-db/json2/scvo/templates/pages/home.hbs
@@ -108,22 +108,26 @@
     </div>
     {{/with}}
 
-    <div class="featured-background-image" style="background-image: url('https://storage.googleapis.com/scvo-cms/wp-content/uploads/2018/01/SCA-2018-SCVOWEB-MAIN-1400x400.jpg');">
+    <div class="featured-background-image charity-awards" style="background-image: url('https://storage.googleapis.com/scvo-cms/wp-content/uploads/2018/01/SCA-2018-SCVOWEB-MAIN-1400x400.jpg');">
         <div class="container-fluid">
             <div class="featured scvo-cms scvo-cms-page scvo-cms-page-20536 mdc-layout-grid">
                 <div class="mdc-layout-grid__inner">
-                    <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4 mdc-layout-grid__cell--span-3-tablet mdc-layout-grid__cell--span-4-phone">
+                    <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4 mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-4-phone">
                         <a href="/scottish-charity-awards">
                             <img alt="Scottish Charity Awards" class="header-text" src="https://storage.googleapis.com/scvo-cms/wp-content/uploads/2018/01/SCA_2018_LOGO_MAIN.png">
                         </a>
                     </div>
-                    <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-8 mdc-layout-grid__cell--span-5-tablet mdc-layout-grid__cell--span-4-phone">
-                        <h2 style="padding-top: 3rem; color: white;">
-                            The Scottish Charity Awards are back for 2018, and we want you to tell us which Scottish charities and individuals had been the best, most innovative and effective during the past year!
-                        </h2>
-                        <p style="line-height: 1.6rem; font-size: 1.25rem;">
-                            There are eight award categories – Charity of the Year, Charity Champion, Demonstrating Digital, Pioneering Project, Terrific Trustee, Leading Light, Celebrating Communities and Cracking Campaign – with the winners to be decided by our panel of judges and announced at our awards ceremony in June. <a href="/scottish-charity-awards">Read more</a>
-                        </p>
+                    <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-8 mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-4-phone">
+                        <div class="mdc-card">
+                            <div class="mdc-card-inner">
+                                <h2>
+                                    The Scottish Charity Awards are back for 2018, and we want you to tell us which Scottish charities and individuals had been the best, most innovative and effective during the past year!
+                                </h2>
+                                <p>
+                                    There are eight award categories – Charity of the Year, Charity Champion, Demonstrating Digital, Pioneering Project, Terrific Trustee, Leading Light, Celebrating Communities and Cracking Campaign – with the winners to be decided by our panel of judges and announced at our awards ceremony on June 14th at the EICC in Edinburgh. <a href="/scottish-charity-awards">Read more</a>
+                                </p>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
