--- a/src/assets/css/scvo-styles.scss
+++ b/src/assets/css/scvo-styles.scss
@@ -1004,6 +1004,23 @@ section.search {
                 max-width: 100%;
             }
         }
+        .featured-background-image.charity-awards {
+            .mdc-card {
+                background-color: rgba(0,0,0,0.5);
+                margin-top: $unit*3;
+                .mdc-card-inner {
+                    padding: $unit;
+                    h2 {
+                        color: white;
+                        margin-top: 0;
+                    }
+                    p {
+                        line-height: 1.6rem;
+                        font-size: 1.25rem;
+                    }
+                }
+            }
+        }
     }
     .featured {
         .mdc-card__supporting-text {
@@ -3259,6 +3276,18 @@ footer {
     .home .splash-image.hello .container-fluid .mdc-layout-grid p.header-extra {
         font-size: 1.2rem;
         margin-bottom: $unit/2;
+    }
+    .home .featured-content .featured-background-image.charity-awards .mdc-card {
+        margin-top: 0;
+        img.header-text {
+            margin: 0 auto;
+            display: block;
+            text-align: center;
+        }
+        h2 {
+            padding: 0 !important;
+            margin: 0 !important;
+        }
     }
     .breadcrumbs {
         font-size: 85%;
