Charity awards updates

--- a/src/assets/css/scvo-styles.scss
+++ b/src/assets/css/scvo-styles.scss
@@ -507,6 +507,33 @@ primary-dark: #251032
     .the-gathering .callout-image.gathering-7 {
         background-image: url('https://storage.googleapis.com/scvo-cms/scvo-cms-content/images/headers/THEGATHERING-23.02.17_0253.jpg');
     }
+    .scottish-charity-awards .callout-image.charity-awards-1 {
+        background-image: url('https://storage.googleapis.com/scvo-cms/wp-content/uploads/2018/01/ENABLE-Scotland-Cracking-Campaign-2.jpg');
+    }
+    .scottish-charity-awards .callout-image.charity-awards-2 {
+        background-image: url('https://storage.googleapis.com/scvo-cms/wp-content/uploads/2018/01/Street-Soccer-Scotland-Charity-of-the-Year.jpg');
+    }
+    .scottish-charity-awards .callout-image.charity-awards-3 {
+        background-image: url('https://storage.googleapis.com/scvo-cms/wp-content/uploads/2018/01/Drake-Music-Scotland-Demonstrating-Digital-Winners.jpg');
+    }
+    .scottish-charity-awards .callout-image.charity-awards-4 {
+        background-image: url('https://storage.googleapis.com/scvo-cms/wp-content/uploads/2018/01/Celine-Sinclair-The-Yard-Leading-Light.jpg');
+    }
+    .scottish-charity-awards .callout-image.charity-awards-5 {
+        background-image: url('https://storage.googleapis.com/scvo-cms/wp-content/uploads/2018/01/dates-n-mates-C-change-Scotland-Pioneering-Project.jpg');
+    }
+    .scottish-charity-awards .callout-image.charity-awards-6 {
+        background-image: url('https://storage.googleapis.com/scvo-cms/wp-content/uploads/2018/01/Dunaverty-Hall-Committee-Celebrating-Communities.jpg');
+    }
+    .scottish-charity-awards .callout-image.charity-awards-7 {
+        background-image: url('https://storage.googleapis.com/scvo-cms/wp-content/uploads/2018/01/Gordons-Fightback-MND-Scotland-Peoples-Choice-Award.jpg');
+    }
+    .scottish-charity-awards .callout-image.charity-awards-8 {
+        background-image: url('https://storage.googleapis.com/scvo-cms/wp-content/uploads/2018/01/James-Campbell-Bobath-Scotland-Terrific-Trustee-1.jpg');
+    }
+    .scottish-charity-awards .callout-image.charity-awards-9 {
+        background-image: url('https://storage.googleapis.com/scvo-cms/wp-content/uploads/2018/01/Laura-Young-Teapot-Trust-Charity-Champion.jpg');
+    }
     .community-jobs-scotland .callout-image.saltire {
         background-image: url('https://storage.googleapis.com/scvo-cms/scvo-cms-content/images/headers/saltire.jpg');
     }
@@ -1848,7 +1875,6 @@ body.the-gathering {
         margin-top: $unit;
     }
 }
-body.scottish-charity-awards .scvo-cms-page-20040,
 body.the-gathering .full {
     width: 60%;
 }
@@ -3223,7 +3249,6 @@ footer {
             width: 100%;
         }
     }
-    body.scottish-charity-awards .scvo-cms-page-20040,
     body.the-gathering .full {
         width: 100%;
     }
