--- a/functions/test-db/json2/scvo/templates/pages/page-charity-awards.hbs
+++ b/functions/test-db/json2/scvo/templates/pages/page-charity-awards.hbs
@@ -17,7 +17,7 @@
         </div>
         {{/handle_404}}
     </div>
-    <div class="swiper-container">
+    <!-- <div class="swiper-container">
         <div class="swiper-wrapper">
             <div class="cta-content callout-image charity-awards-1 swiper-slide">
                 <div class="container-fluid">
@@ -55,9 +55,6 @@
                 </div>
             </div>
         </div>
-        <!-- <div class="swiper-pagination"></div>
-        <div class="swiper-button-next"></div>
-        <div class="swiper-button-prev"></div> -->
-    </div>
+    </div> -->
 </div>
 <script src="/assets/js/scvo/sca-landing.js"></script>
