--- a/functions/test-db/json2/scvo/partials/menu-charity-awards.hbs
+++ b/functions/test-db/json2/scvo/partials/menu-charity-awards.hbs
@@ -12,3 +12,33 @@
     {{/each}}
     {{/each}}
 </nav>
+
+<hr />
+<p>
+    <strong>The Scottish Charity Awards 2018 is proudly sponsored by:</strong>
+</p>
+<div class="mdc-layout-grid">
+    <div class="mdc-layout-grid__inner">
+        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6-desktop mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-phone">
+            <a href="http://www.scvo.org.uk" target="_blank" class="sponsor" style="background-image:url('https://goodhq.org/images/charityawards/logos/scvo-logo-200x200.png');"></a>
+        </div>
+        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6-desktop mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-phone">
+            <a href="http://www.cafonline.org" target="_blank" class="sponsor" style="background-image:url('https://goodhq.org/images/charityawards/logos/caf-logo-200x200.png');"></a>
+        </div>
+        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6-desktop mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-phone">
+            <a href="http://www.keegan-pennykid.com" target="_blank" class="sponsor" style="background-image:url('https://goodhq.org/images/charityawards/logos/kandp-logo-200x200.png');"></a>
+        </div>
+        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6-desktop mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-phone">
+            <a href="http://www.oscr.org.uk" target="_blank" class="sponsor" style="background-image:url('https://goodhq.org/images/charityawards/logos/oscr-logo-200x200.png');"></a>
+        </div>
+        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6-desktop mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-phone">
+            <a href="https://beta.gov.scot/policies/digital/" target="_blank" class="sponsor" style="background-image:url('https://goodhq.org/images/charityawards/logos/digiscot-logo-200x200.png');"></a>
+        </div>
+        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6-desktop mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-phone">
+            <a href="http://www.sgn.co.uk" target="_blank" class="sponsor" style="background-image:url('https://goodhq.org/images/charityawards/logos/sgn-logo-200x200.png');"></a>
+        </div>
+    </div>
+</div>
+<p>
+    <a href="https://storage.googleapis.com/scvo-cms/wp-content/uploads/2018/01/SCA-2018-SPONSORSHIP-OFFER.pdf" download>Become a sponsor</a> (PDF)
+</p>
