--- a/src/assets/css/scvo-styles.scss
+++ b/src/assets/css/scvo-styles.scss
@@ -1888,6 +1888,13 @@ body.scottish-charity-awards {
             margin-top: $unit;
         }
     }
+    .sponsor {
+        width: 100%;
+        height: 80px;
+        display: block;
+        background-size: cover;
+        background-position: center center;
+    }
     .mdc-card.celebrating-communities .mdc-card__primary {
         background-color: #729957;
     }
