Added GA 404 event call

--- a/functions/test-db/json2/scvo/partials/handle-404.hbs
+++ b/functions/test-db/json2/scvo/partials/handle-404.hbs
@@ -26,3 +26,10 @@
         <h3>Try searching for a topic</h3>
     {{/ifAll}}
 {{/if}}
+
+<script>
+    gtag('event', '404', {
+        event_category: '{{name}}', 
+        event_label: '{{params.uri.pathname}}'
+    });
+</script>
