--- a/src/assets/css/scvo-styles.scss
+++ b/src/assets/css/scvo-styles.scss
@@ -2086,6 +2086,12 @@ h1.mdc-typography--title {
 .mdc-card__primary .mdc-card__title--large {
     padding-top: 0;
 }
+.mdc-card__primary .mdc-card__title {
+    padding-bottom: 0;
+}
+.search-result.scvo-cms-post .mdc-card__title {
+    padding-bottom: $unit/2;
+}
 .funding-updates {
     h3 {
         margin-top: 0;
