Updated OG tags

--- a/functions/test-db/json2/scvo/templates/pages/page-head-tags.hbs
+++ b/functions/test-db/json2/scvo/templates/pages/page-head-tags.hbs
@@ -8,9 +8,9 @@
             <meta property="og:title" content="SCVO – Scottish Council for Voluntary Organisations" data-dynamic="true">
         {{/ifAny}}
 
-        {{#ifAny og_image ../og_image}}
-            <meta property="og:image" content="{{default og_image ../og_image}}" data-dynamic="true">
-        {{/ifAny}}
+        <meta property="og:image" content="https://storage.googleapis.com/scvo-cms/scvo-cms-content/images/logos/scvo-logo.jpg" data-dynamic="true">
+        <meta property="og:image:width" content="96" data-dynamic="true">
+        <meta property="og:image:height" content="96" data-dynamic="true">
 
         {{#ifAny og_summary description ../og_summary ../description}}
             <meta property="og:summary" content="{{default og_summary (default ../og_summary (default description ../description))}}" data-dynamic="true">
