--- a/functions/test-db/json2/scvo/templates/posts/post-category-head-tags.hbs
+++ b/functions/test-db/json2/scvo/templates/posts/post-category-head-tags.hbs
@@ -3,9 +3,9 @@
     <meta property="og:title" content="SCVO – Posts about {{#each primaryResponse.hits.hits.[0]._source.categories_slug}}{{#compare this "===" (lastItem (split ../params.path '_'))}}{{{lookup ../primaryResponse.hits.hits.[0]._source.categories @index}}}{{/compare}}{{/each}}" data-dynamic="true">
 
     {{#with primaryResponse.hits.hits.[0]._source}}
-        {{#ifAny og_image ../og_image}}
-            <meta property="og:image" content="{{default og_image ../og_image}}" data-dynamic="true">
-        {{/ifAny}}
+        <meta property="og:image" content="https://storage.googleapis.com/scvo-cms/scvo-cms-content/images/logos/scvo-logo.jpg" data-dynamic="true">
+        <meta property="og:image:width" content="96" data-dynamic="true">
+        <meta property="og:image:height" content="96" data-dynamic="true">
 
         {{#ifAny og_summary description ../og_summary ../description}}
             <meta property="og:summary" content="{{default og_summary (default ../og_summary (default description ../description))}}" data-dynamic="true">
