--- a/functions/test-db/json2/scvo/templates/posts/post-head-tags.hbs
+++ b/functions/test-db/json2/scvo/templates/posts/post-head-tags.hbs
@@ -8,11 +8,9 @@
             <meta property="og:title" content="SCVO – Scottish Council for Voluntary Organisations" data-dynamic="true">
         {{/ifAny}}
 
-        {{#ifAny og_image ../og_image}}
-            <meta property="og:image" content="{{default og_image ../og_image}}" data-dynamic="true">
-            <meta property="og:image:width" content="96" data-dynamic="true">
-            <meta property="og:image:height" content="96" data-dynamic="true">
-        {{/ifAny}}
+        <meta property="og:image" content="https://storage.googleapis.com/scvo-cms/scvo-cms-content/images/logos/scvo-logo.jpg" data-dynamic="true">
+        <meta property="og:image:width" content="96" data-dynamic="true">
+        <meta property="og:image:height" content="96" data-dynamic="true">
 
         <meta property="og:type" content="article" data-dynamic="true">
 
