--- a/functions/test-db/json2/scvo/templates/jobs/goodmoves-job-search.hbs
+++ b/functions/test-db/json2/scvo/templates/jobs/goodmoves-job-search.hbs
@@ -80,7 +80,7 @@
                                     </div>
                                     <div class="mdc-textfield mdc-textfield--upgraded">
                                         <label class="mdc-textfield__label" for="minimum_salary">Minimum salary</label>
-                                        <input type="text" class="mdc-textfield__input" name="minimum_salary" id="jobs-minimum_salary" placeholder="e.g. 32000" value="{{params.query.q}}">
+                                        <input type="text" class="mdc-textfield__input" name="minimum_salary" id="jobs-minimum_salary" placeholder="e.g. 32000" value="{{params.query.minimum_salary}}">
                                     </div>
                                 </div>
                             </div>
