--- a/src/assets/css/scvo-styles.scss
+++ b/src/assets/css/scvo-styles.scss
@@ -1452,6 +1452,7 @@ section.search {
                 height: $nav-height;
                 margin: 0;
                 .mdc-tab {
+                    background-color: transparent;
                     color: white !important;
                     font-size: 1rem;
                     min-height: $nav-height;
