--- a/functions/test-db/json2/humanrightsdeclaration/layouts/default.hbs
+++ b/functions/test-db/json2/humanrightsdeclaration/layouts/default.hbs
@@ -6,26 +6,26 @@
     <base href="/">
     <!--{section:head}-->
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="apple-touch-icon" sizes="57x57" href="/assets/icons/apple-icon-57x57.png">
-    <link rel="apple-touch-icon" sizes="60x60" href="/assets/icons/apple-icon-60x60.png">
-    <link rel="apple-touch-icon" sizes="72x72" href="/assets/icons/apple-icon-72x72.png">
-    <link rel="apple-touch-icon" sizes="76x76" href="/assets/icons/apple-icon-76x76.png">
-    <link rel="apple-touch-icon" sizes="114x114" href="/assets/icons/apple-icon-114x114.png">
-    <link rel="apple-touch-icon" sizes="120x120" href="/assets/icons/apple-icon-120x120.png">
-    <link rel="apple-touch-icon" sizes="144x144" href="/assets/icons/apple-icon-144x144.png">
-    <link rel="apple-touch-icon" sizes="152x152" href="/assets/icons/apple-icon-152x152.png">
-    <link rel="apple-touch-icon" sizes="180x180" href="/assets/icons/apple-icon-180x180.png">
-    <link rel="icon" type="image/png" sizes="192x192"  href="/assets/icons/android-icon-192x192.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="/assets/icons/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="96x96" href="/assets/icons/favicon-96x96.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/assets/icons/favicon-16x16.png">
-    <link rel="manifest" href="/assets/icons/manifest.json">
+    <link rel="apple-touch-icon" sizes="57x57" href="https://storage.googleapis.com/scvo-assets/assets/icons/apple-icon-57x57.png">
+    <link rel="apple-touch-icon" sizes="60x60" href="https://storage.googleapis.com/scvo-assets/assets/icons/apple-icon-60x60.png">
+    <link rel="apple-touch-icon" sizes="72x72" href="https://storage.googleapis.com/scvo-assets/assets/icons/apple-icon-72x72.png">
+    <link rel="apple-touch-icon" sizes="76x76" href="https://storage.googleapis.com/scvo-assets/assets/icons/apple-icon-76x76.png">
+    <link rel="apple-touch-icon" sizes="114x114" href="https://storage.googleapis.com/scvo-assets/assets/icons/apple-icon-114x114.png">
+    <link rel="apple-touch-icon" sizes="120x120" href="https://storage.googleapis.com/scvo-assets/assets/icons/apple-icon-120x120.png">
+    <link rel="apple-touch-icon" sizes="144x144" href="https://storage.googleapis.com/scvo-assets/assets/icons/apple-icon-144x144.png">
+    <link rel="apple-touch-icon" sizes="152x152" href="https://storage.googleapis.com/scvo-assets/assets/icons/apple-icon-152x152.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="https://storage.googleapis.com/scvo-assets/assets/icons/apple-icon-180x180.png">
+    <link rel="icon" type="image/png" sizes="192x192"  href="https://storage.googleapis.com/scvo-assets/assets/icons/android-icon-192x192.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="https://storage.googleapis.com/scvo-assets/assets/icons/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="96x96" href="https://storage.googleapis.com/scvo-assets/assets/icons/favicon-96x96.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="https://storage.googleapis.com/scvo-assets/assets/icons/favicon-16x16.png">
+    <link rel="manifest" href="https://storage.googleapis.com/scvo-assets/assets/icons/manifest.json">
     <meta name="msapplication-TileColor" content="#00838f">
-    <meta name="msapplication-TileImage" content="/assets/icons/ms-icon-144x144.png">
+    <meta name="msapplication-TileImage" content="https://storage.googleapis.com/scvo-assets/assets/icons/ms-icon-144x144.png">
     <meta name="theme-color" content="#00838f">
-    <link type="text/css" rel="stylesheet" href="/assets/css/material-components-web.min.css">
-    <link type="text/css" rel="stylesheet" href="/assets/fonts/fontawesome/css/fontawesome-all.min.css">
-    <link type="text/css" rel="stylesheet" href="/assets/css/humanrightsdeclaration-styles.css">
+    <link type="text/css" rel="stylesheet" href="https://storage.googleapis.com/scvo-assets/assets/css/material-components-web.min.css">
+    <link type="text/css" rel="stylesheet" href="https://storage.googleapis.com/scvo-assets/assets/fonts/fontawesome/css/fontawesome-all.min.css">
+    <link type="text/css" rel="stylesheet" href="https://storage.googleapis.com/scvo-assets/assets/css/humanrightsdeclaration-styles.css">
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-3467930-27"></script>
     <script>
       window.dataLayer = window.dataLayer || [];
@@ -141,7 +141,7 @@
                                 </div>
                                 <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-3-desktop">
                                     <a href="https://scvo.org" title="Scottish Council for Voluntary Organisations">
-                                        <img src="/assets/images/scvo-logo.png" alt="Scottish Council for Voluntary Organisations" class="logo scvo" />
+                                        <img src="https://storage.googleapis.com/scvo-assets/assets/images/scvo-logo.png" alt="Scottish Council for Voluntary Organisations" class="logo scvo" />
                                     </a>
                                 </div>
                             </div>
@@ -151,9 +151,9 @@
             </footer>
         </div>
     </scvo-site>
-    <script type="text/javascript" src="/assets/js/material-components-web.js"></script>
+    <script type="text/javascript" src="https://storage.googleapis.com/scvo-assets/assets/js/material-components-web.js"></script>
     <script type="text/javascript" id="cookieinfo"
-    	src="/assets/js/cookieinfo.min.js"
+    	src="https://storage.googleapis.com/scvo-assets/assets/js/cookieinfo.min.js"
     	data-bg="#1A1A19"
     	data-fg="#FFFFFF"
     	data-link="#FFFFFF"
@@ -163,7 +163,7 @@
     	data-cookie="CookieInfoScript"
     	data-text-align="left">
     </script>
-    <script type="text/javascript" src="/assets/js/humanrightsdeclaration/root.js"></script>
+    <script type="text/javascript" src="https://storage.googleapis.com/scvo-assets/assets/js/humanrightsdeclaration/root.js"></script>
     <!--{section:foot}-->
 </body>
 </html>
