--- a/functions/test-db/json2/scvo/layouts/amp.hbs
+++ b/functions/test-db/json2/scvo/layouts/amp.hbs
@@ -27,7 +27,7 @@
             color: #e3e3e3;
             padding: 10px;
         }
-        
+
         .menu-button {
             display: inline-block;
             width: 50px;
@@ -38,11 +38,11 @@
             border: none;
             float: right;
         }
-        
+
         .menu-button svg {
             vertical-align: middle;
         }
-       
+
         amp-sidebar {
             font-size: 1.2rem;
         }
@@ -93,7 +93,7 @@
         .header-inner, .article-inner, .footer-inner {
             padding: 0 15px;
         }
-       
+
         article li {
             margin: 0.75rem 0;
         }
@@ -105,20 +105,20 @@
         article h1 {
             font-size: 3rem;
         }
-        
+
         .scvo-cms-post > p::first-letter {
             font-size: 4rem;
             line-height: 4rem;
             font-family: serif;
             font-weight: 500;
         }
-        
+
         .scvo-cms-post > p~ p::first-letter {
             font-size: 1.2rem;
             font-family: sans-serif;
             font-weight: normal;
         }
-        
+
         .post-info {
             border-top: 1px solid #000000;
             border-bottom: 1px solid #000000;
@@ -157,14 +157,14 @@
             padding: 0;
             margin: 0;
         }
-        
+
         .inline-list li {
             display: inline-block;
             padding-left: 15px;
             margin: 0;
             line-height: initial;
         }
-        
+
         .inline-list li:first-child {
             padding-left: 0;
         }
@@ -188,7 +188,7 @@
         }
 
         /* Hide Regular Stuff */
-        
+
         #share-menu-button,
         .mdc-simple-menu {
             display: none;
@@ -225,7 +225,7 @@
         <div class="container-fluid">
             <div class="header-inner">
                 <a href="/" class="brand-logo" title="Scottish Council for Voluntary Organisations">
-                    <amp-img src="/assets/images/scvo-logo.png" height="50px" width="162px">
+                    <amp-img src="https://storage.googleapis.com/scvo-assets/assets/images/scvo-logo.png" height="50px" width="162px">
                 </a>
                 <button on="tap:sidebar.toggle" class="menu-button" title="Open menu">
                     <svg width="30" height="30" fill="#ffffff" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" x="0px" y="0px" viewBox="0 0 100 100" enable-background="new 0 0 100 100" xml:space="preserve"><g><path d="M92.028,25h-84c-1.657,0-3-1.343-3-3V8c0-1.657,1.343-3,3-3h84c1.657,0,3,1.343,3,3v14C95.028,23.657,93.685,25,92.028,25z   "/></g><g><path d="M92.028,59.938h-84c-1.657,0-3-1.343-3-3v-14c0-1.657,1.343-3,3-3h84c1.657,0,3,1.343,3,3v14   C95.028,58.594,93.685,59.938,92.028,59.938z"/></g><g><path d="M92.028,94.875h-84c-1.657,0-3-1.343-3-3v-14c0-1.657,1.343-3,3-3h84c1.657,0,3,1.343,3,3v14   C95.028,93.532,93.685,94.875,92.028,94.875z"/></g></svg>
@@ -247,7 +247,7 @@
                     <h1>Contact</h1>
                     <ul>
                         <li>
-                            <strong>Email:</strong> 
+                            <strong>Email:</strong>
                             <a href="mailto:enquiries@scvo.org.uk">enquiries@scvo.org.uk</a>
                         </li>
                         <li>
@@ -301,7 +301,7 @@
                 <hr>
                 <section>
                     <a href="/" class="brand-logo" title="Scottish Council for Voluntary Organisations">
-                        <amp-img src="/assets/images/scvo-logo.png" alt="Scottish Council for Voluntary Organisations" height="50px" width="162px">
+                        <amp-img src="https://storage.googleapis.com/scvo-assets/assets/images/scvo-logo.png" alt="Scottish Council for Voluntary Organisations" height="50px" width="162px">
                     </a>
                     <p>
                         &copy; {{momentFormat (moment) "YYYY"}}. The Scottish Council for Voluntary Organisations (SCVO) is a Scottish Charitable Incorporated Organisation. Charity registered in Scotland <a href="https://www.oscr.org.uk/about-charities/search-the-register/charity-details?number=SC003558">SC003558</a>. Registered office Mansfield Traquair Centre, 15 Mansfield Place, Edinburgh EH3 6BB.
