--- a/functions/test-db/json2/scvo/templates/posts/post.hbs
+++ b/functions/test-db/json2/scvo/templates/posts/post.hbs
@@ -69,4 +69,4 @@
         {{/handle_404}}
     </div>
 </div>
-<script src="/assets/js/scvo/post.js"></script>
+<script src="https://storage.googleapis.com/scvo-assets/assets/js/scvo/post.js"></script>
