--- a/functions/test-db/json2/scvo/templates/funding/funding-updates-link-gen.hbs
+++ b/functions/test-db/json2/scvo/templates/funding/funding-updates-link-gen.hbs
@@ -53,4 +53,4 @@
         </p>
     </div>
 </div>
-<script src="/assets/js/scvo/funding-updates-link-gen.js"></script>
+<script src="https://storage.googleapis.com/scvo-assets/assets/js/scvo/funding-updates-link-gen.js"></script>
