--- a/functions/test-db/json2/scvo/templates/pages/page-cjs-landing.hbs
+++ b/functions/test-db/json2/scvo/templates/pages/page-cjs-landing.hbs
@@ -77,4 +77,4 @@
 
 {{> footer_services}}
 
-<!-- <script src="/assets/js/scvo/cjs-landing.js"></script> -->
+<!-- <script src="https://storage.googleapis.com/scvo-assets/assets/js/scvo/cjs-landing.js"></script> -->
