--- a/functions/test-db/json2/scvo/templates/pages/page-credit-union-loan-calculator.hbs
+++ b/functions/test-db/json2/scvo/templates/pages/page-credit-union-loan-calculator.hbs
@@ -70,4 +70,4 @@
         {{/handle_404}}
     </div>
 </div>
-<script src="/assets/js/scvo/credit-union-loan-calculator.js"></script>
+<script src="https://storage.googleapis.com/scvo-assets/assets/js/scvo/credit-union-loan-calculator.js"></script>
