--- a/functions/test-db/json2/scvo/partials/handle-404.hbs
+++ b/functions/test-db/json2/scvo/partials/handle-404.hbs
@@ -19,7 +19,7 @@
                 {{/ifAll}}
             </div>
             <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-desktop mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-4-phone">
-                <img src="/assets/images/404.png" class="responsive">
+                <img src="https://storage.googleapis.com/scvo-assets/assets/images/404.png" class="responsive">
             </div>
         </div>
     </div>
