--- a/functions/test-db/json2/scvo/templates/pages/page-charity-awards.hbs
+++ b/functions/test-db/json2/scvo/templates/pages/page-charity-awards.hbs
@@ -57,4 +57,4 @@
         </div>
     </div> -->
 </div>
-<script src="/assets/js/scvo/sca-landing.js"></script>
+<script src="https://storage.googleapis.com/scvo-assets/assets/js/scvo/sca-landing.js"></script>
