--- a/functions/test-db/json2/scvo/templates/main_search/search.hbs
+++ b/functions/test-db/json2/scvo/templates/main_search/search.hbs
@@ -74,7 +74,7 @@
 
                         <h3>Digital programme</h3>
                         {{>filter_checkbox label="Funded projects" value="scvo-grant-charter"}}
-                        {{>filter_checkbox label="Digital Participation Charter signatories" value="digital-charter-signatory"}}
+                        {{>filter_checkbox label="Charter signatories" value="digital-charter-signatory"}}
 
                         <h3>Funding Scotland</h3>
                         {{>filter_checkbox label="Funds" value="funding-scotland-fund"}}
