--- a/src/assets/css/scvo-styles.scss
+++ b/src/assets/css/scvo-styles.scss
@@ -1289,6 +1289,9 @@ section.search {
 .mdc-form-field {
     font-size: 1rem;
 }
+.mdc-form-field > label {
+    line-height: 38px;
+}
 // .mdc-select {
 //     background-image: none;
 // }
