--- a/functions/test-db/json2/scvo/layouts/default.hbs
+++ b/functions/test-db/json2/scvo/layouts/default.hbs
@@ -39,8 +39,8 @@
         {{/each}}
     </script>
     <link type="text/css" rel="stylesheet" href="https://storage.googleapis.com/scvo-assets/assets/css/material-components-web.min.css">
-    <link type="text/css" rel="stylesheet" href="https://storage.googleapis.com/scvo-assets/assets/fonts/fontawesome/css/fontawesome-all.min.css">
-    <link type="text/css" rel="stylesheet" href="https://storage.googleapis.com/scvo-assets/assets/css/scvo-styles.css">
+    <link type="text/css" rel="stylesheet" href="/assets/fonts/fontawesome/css/fontawesome-all.min.css">
+    <link type="text/css" rel="stylesheet" href="/assets/css/scvo-styles.css">
 </head>
 <body class="mdc-theme--site-bg {{#if route.params.path}}{{replace route.params.path '_' ' '}}{{else}}home{{/if}}">
     <scvo-site>
@@ -232,7 +232,7 @@
     	data-cookie="CookieInfoScript"
     	data-text-align="left">
     </script>
-    <script type="text/javascript" src="https://storage.googleapis.com/scvo-assets/assets/js/scvo/root.js"></script>
+    <script type="text/javascript" src="/assets/js/scvo/root.js"></script>
     <!--{section:foot}-->
 </body>
 </html>
