--- a/functions/test-db/json2/scvo/templates/grants/grant-charter-data.hbs
+++ b/functions/test-db/json2/scvo/templates/grants/grant-charter-data.hbs
@@ -1,5 +1,5 @@
 {
     "grants": [
-        {{#each primaryResponse.hits.hits}}{{{_source.rendered.threesixtygiving}}}{{#unless isLast}},{{/unless}}{{/each}}
+        {{#forEach primaryResponse.hits.hits}}{{{_source.rendered.threesixtygiving}}}{{#unless isLast}},{{/unless}}{{/forEach}}
     ]
 }
