--- a/functions/test-db/json2/scvo/templates/grants/grant-charter-data.hbs
+++ b/functions/test-db/json2/scvo/templates/grants/grant-charter-data.hbs
@@ -1,5 +1,5 @@
 {
     "grants": [
-        {{#forEach primaryResponse.hits.hits}}{{{_source.rendered.threesixtygiving}}}{{#unless isLast}},{{/unless}}{{/forEach}}
+        {{{join (map primaryResponse.hits.hits (getProp "_source.rendered.threesixtygiving"))}}}
     ]
 }
